# ypt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_browser_detector.py  test_cli.py  test_config.py  test_deb_extractor.py  test_integration.py  test_launcher_generator.py
ypt/: __init__.py  __main__.py  appimage_installer.py  browser_detector.py  cli.py  config.py  deb_extractor.py  debug.py  desktop_integration.py  launcher_generator.py  url_handler_shim.py
